# learning.rs

./: .gitignore  .gitmodules  README.md
actix-tut/: Cargo.toml
actix_bmi_calc/: Cargo.toml
actix_hello/: Cargo.toml
actix_tut/: Cargo.toml
argon2/: Cargo.toml  README.md
axum-hello/: Cargo.toml
axum-sample/: Cargo.toml
bl/: Cargo.toml
calculate_mean_median_mode/: Cargo.toml
clap_sample/: Cargo.toml
cmp-std-rayon-tokio/: Cargo.toml
create-gif/: Cargo.toml  pyproject.toml
create-gif/src/: lib.rs
create-gif/test/: test.py
defining_shared_behavior/: Cargo.toml
enum_control_flow/: Cargo.toml
error_handling/: hello.txt
extreme/: Cargo.toml
fahrenheit_to_celsius_conversion/: Cargo.toml
ferris-says/: Cargo.toml
ferris_says/: Cargo.toml
github_api/: Cargo.toml
github_api/src/: main.rs
grpc-hello/: Cargo.toml
hierarchical_configuration/: Cargo.toml
hierarchical_configuration/config/: default.yaml  development.yaml  production.yaml
hierarchical_configuration/src/: configuration.rs  main.rs
implement_list/: Cargo.toml
macro_echo_num/: Cargo.toml
maltithreaded-web-server/: Cargo.toml
messaging_app/: Cargo.toml
minigrep/: README.md
number-guessing/: Cargo.toml
parse_json/: Cargo.toml  sample.json
pyo3-intro/: Cargo.toml  pyproject.toml  test.py
scraping/: Cargo.toml
scraping/src/: main.rs
simple_error_handilng/: Cargo.toml
simple_websocket/: Cargo.toml
tempfile/: Cargo.toml
tokio-chat/: Cargo.toml
tokio_fs_process/: Cargo.toml
vaildating_references_with_lifetimes/: Cargo.toml
validating_phantom_data/: Cargo.toml
(+96 files in other folders)
