[package]
name = "create-gif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "create_gif"
crate-type = ["cdylib"]

[dependencies]
gif = "0.11.4"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
