[package]
name = "github_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features = ["full"] }
