[package]
name = "hierarchical_configuration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", default-features = false, features = ["yaml"]}
serde = "1.0.137"
serde_derive = "1.0.137"
