[package]
name = "scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.13.0"
serde = { version = "1.0.138", features = ["derive"] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
